# godot-uvc-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  GodotAndroidUVC.gdap  README.md  build.gradle
demo/: Main.gd  Main.tscn  export_presets.cfg  main.gd  main.tscn  project.godot
demo/android/plugins/: Uvc.debug.aar  Uvc.release.aar
src/gdnative/: gdlibrary.cpp  uvc-feed.cpp  uvc-feed.h  uvc-server.cpp  uvc-server.h
src/gdscript/: simple.cpp  uvc-server.cpp
src/main/: AndroidManifest.xml
src/main/assets/godot/plugin/v1/Uvc/: guvc.gdnlib  guvc.gdns  uvc-server.gdnlib  uvc-server.gdns
src/main/cpp/jni/: jni_common.h  uvc_plugin_jni.cpp
src/main/java/org/eyeskills/godot/plugin/android/uvc/: UvcPlugin.java
